# crewai-tt

ai_latest_development/: README.md  pyproject.toml  report.md
ai_latest_development/src/ai_latest_development/: crew.py  main.py
ai_news/: README.md  pyproject.toml  test_filewriter.py  test_import.py
ai_news/news/: 2025-09-14_ai_healthcare_news_article.md  2025-09-14_ai_healthcare_news_article_filewriter.md  2025-09-14_ai_llms_news_article.md  2025-09-14_ai_llms_news_article_filewriter.md  2025-09-14_blockchain_news_article.md  2025-09-14_blockchain_news_article_filewriter.md  2025-09-14_news_article.md
ai_news/src/ai_news/: crew.py  main.py
ai_news/src/ai_news/config/: agents.yaml  tasks.yaml
ai_news/src/ai_news/tools/: file_writer_tool.py
meeting_minutes/: README.md  crewai_flow.html  pyproject.toml
meeting_minutes/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/config/: agents.yaml  tasks.yaml
meeting_minutes/src/meeting_minutes/crews/gmailcrew/tools/: credentials.json  gmail_tool.py  gmail_utility.py  token.json
meeting_minutes/src/meeting_minutes/crews/meeting_minutes__crew/: meeting_minutes__crew.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes__crew/config/: agents.yaml  tasks.yaml
pdf_rag/: README.md  pyproject.toml
pdf_rag/src/pdf_rag/: crew.py  main.py
poem_flow/: README.md  poem.txt  pyproject.toml
poem_flow/src/poem_flow/: main.py
