[project]
name = "ai_news"
version = "0.1.0"
description = "ai-news using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
ai_news = "ai_news.main:run"
run_crew = "ai_news.main:run"
train = "ai_news.main:train"
replay = "ai_news.main:replay"
test = "ai_news.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
