[project]
name = "meeting_minnutes"
version = "0.1.0"
description = "meeting-minnutes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
]

[project.scripts]
kickoff = "meeting_minnutes.main:kickoff"
run_crew = "meeting_minnutes.main:kickoff"
plot = "meeting_minnutes.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
