[project]
name = "pdf_rag"
version = "0.1.0"
description = "pdf_rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
pdf_rag = "pdf_rag.main:run"
run_crew = "pdf_rag.main:run"
train = "pdf_rag.main:train"
replay = "pdf_rag.main:replay"
test = "pdf_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
